Updated swagger and added some routes to be initialised for the user endpoints. #implement #story[981]
